syntax = "proto3";

package user;

option go_package = "github.com/ppeymann/Planora.git/proto/user;userpb";

import "google/protobuf/timestamp.proto";

service UserService {
  rpc SignUp(SignUpRequest) returns (User);
  rpc Login(LoginRequest) returns (User);
  rpc Account(AccountRequest) returns (User);
}

message BaseModel {
  uint64 id = 1;
  google.protobuf.Timestamp created_at = 2;
  google.protobuf.Timestamp updatede_at = 3;
  google.protobuf.Timestamp deleted_at = 4;
}

message SignUpRequest {
  string username = 1;
  string password = 2;
  string email = 3;
  string first_name = 4;
  string last_name = 5;
}

message User {
  BaseModel model = 1;
  string username = 2;
  string email = 3;
  string first_name = 4;
  string last_name = 5;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message AccountRequest { uint64 id = 1; }